# pwned

./: .gitignore  .gitmodules  .travis.yml  Makefile  NOTES  README.md  deploy.sh  gtest_provision.sh  index.html  params.json  ubuntu_1204_provision.sh  ubuntu_1310_provision.sh  ubuntu_1410_provision.sh
active_proto/: 2  Makefile  active_proto.hpp  db.proto  person.pb.cc  person.pb.h  person.proto  tests.cpp
curl/: Makefile  a.out  curl.hpp  formicator.hpp  notes.txt  tests.cpp  tests.gcda  tests.gcno
curl/ideas/: Makefile  (+4 more)
debug/: Makefile  debug.hpp  less  tests.cpp
ecto1/: Makefile  ecto1.hpp  start_phantom_16666.sh  stop_phantom_16666.sh  tests.cpp
enterprice/: Makefile  candle_stream.hpp  memory.hpp  multi_candle_stream.hpp  mysql.hpp  tests.cpp  time.hpp
examples/: io_vector.cpp
ideas/: Makefile  active_record_test.cpp  bm_test.cpp  ecto1_test.cpp  lazy_concept.cpp  pwned_combinator.cpp  tbb_test.cpp
io/: Makefile  io.hpp  more_tests.cpp  tests.cpp
jsoncpp/: CMakeLists.txt  Makefile  jsoncpp.cpp  jsoncpp.hpp  tests.cpp  tests.gcda  tests.gcno
junk/: named.cpp
leveldb/: .gitignore  CMakeLists.txt  Makefile  leveldb.cpp  leveldb.hpp  main.cpp  tests.cpp  tests.gcda  tests.gcno
parameters/: Makefile  parameters.hpp  tests.cpp
pew/: Makefile  pew.hpp  tests.cpp
pretty/: Makefile  pretty.hpp  tests.cpp  tests.gcda  tests.gcno
progress/: Makefile  progress.hpp  tests.cpp  tests.gcda  tests.gcno
server/: Makefile  server.hpp  tests.cpp
sqlsafe/: Makefile  sqlsafe.hpp  tests.cpp
view/: Makefile  tests.cpp  tests.gcda  tests.gcno  view.hpp
(+38 files in other folders)
